# WasmEdge-yolo-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: detect_video.rs  image-inference.rs
examples/image-inference/: Cargo.toml  main.rs
scripts/: build-and-optimize-examples.sh  build-optimize-run.sh  download_v8_models.sh  run-example.sh  wasmedge-runner.sh
src/: lib.rs  prepare.rs  process.rs
yolo-rs-video-plugin/: Cargo.toml  README.md
yolo-rs-video-plugin/.cargo/: config.toml
yolo-rs-video-plugin/src/: decode_video.rs  encode_video.rs  errors.rs  lib.rs  time.rs
yolo-rs-wasm/: .gitignore  Cargo.toml  README.md
yolo-rs-wasm/.cargo/: config.toml
yolo-rs-wasm/examples/: FFMPEG_CMD_MAKE_LOOPED_VIDEO.sh  image-inference.rs  test_features.rs  video-inference.rs
yolo-rs-wasm/scripts/: build-and-optimize-examples.sh  run-example.sh
yolo-rs-wasm/src/: lib.rs  prepare.rs  process.rs  utils.rs  video_proc.rs
