[package]
name = "yolo-rs"
version = "0.1.0"
edition = "2021"
authors = ["schleich.cdaniel@gmail.com"]
categories = ["Webassembly"]
keywords = ["Webassembly", "wasm", "neural-network", "inference", "yolo"]
readme = "README.md"
repository = "https://github.com/WasmEdge/mediapipe-rs"
description = "A Rust library for YOLO vision models"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-nn = "0.6.0"
thiserror = "1.0.48"
image = { version = "0.24.7", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
] }


[dev-dependencies]
clap = { version = "4.4.4", features = ["derive"] }
